@@ -1,5 +1,6 @@
 Version 0.44.0 (In Progress)
 
+  * enhancement to allow for node-type specific config file syncing control
   * fixed missing final update notification when file ownership/permissions changed
   * initconfig utility now includes example networking config file
   * initconfig updated to create const_files/ path for default node type
